# ngs-special-functions

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pypi.yml
demo/: bessel.py  gammaln.py
inc/: specialcf.hpp
src/: CMakeLists.txt  fetch_and_convert_slatec.cmake  specialcf.cpp
test/: test_bessel.py
